--- a/style.css
+++ b/style.css
@@ -32,3 +32,30 @@ nav a {
     text-decoration: none;
 }
 
+/* Header */
+header {
+    background-color: #E74C3C;
+    color: white;
+    padding: 50px 0;
+}
+
+header img {
+    width: 100px;
+    border-radius: 50%;
+}
+
+/* Portfolio */
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    width: 60%;
+    margin: auto;
+    padding: 20px 0;
+}
+
+.grid img {
+    width: 100%;
+    border-radius: 10px;
+}
+
