--- a/style.css
+++ b/style.css
@@ -59,3 +59,38 @@ header img {
     border-radius: 10px;
 }
 
+/* About */
+#about {
+    background-color: #E74C3C;
+    color: white;
+    padding: 50px 20px;
+}
+
+/* Formulaire de contact */
+form {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+}
+
+input, textarea {
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+}
+
+button {
+    background-color: #E74C3C;
+    color: white;
+    border: none;
+    padding: 10px;
+}
+
+/* Footer */
+footer {
+    background-color: #2C3E50;
+    color: white;
+    padding: 20px 0;
+    margin-top: 20px;
+}
