--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header img {
 /* Portfolio */
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr); /* 3 colonnes */
     gap: 20px;
     width: 80%;
     margin: auto;
@@ -64,6 +64,7 @@ header img {
     width: 100%;
     border-radius: 10px;
 }
+
 
 /* About Section */
 #about {
@@ -91,7 +92,7 @@ header img {
     flex: 1;
     text-align: justify;
     line-height: 1.5;
-    max-width: 45%;
+    max-width: 30%;
 }
 
 /* Formulaire de contact */
