--- a/style.css
+++ b/style.css
@@ -50,10 +50,9 @@ header img {
     border-radius: 50%;
 }
 
-/* Portfolio */
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 colonnes */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     width: 80%;
     margin: auto;
